--- a/src/client/reset.css
+++ b/src/client/reset.css
@@ -34,6 +34,11 @@ select {
   font: inherit;
 }
 
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
    scroll-behavior: auto;
